Projet_GL/src/test/deca/syntax/valid/unprovided/include_lexer.deca
// Test du include

#include "if_3.deca"
