Projet_GL/src/test/deca/syntax/invalid/unprovided/include_me.deca
// include du script lui-même

#include "include_me.deca"
